Fixed header spacing/hamburger size

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -12,7 +12,7 @@
   font-size: 2rem;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
   padding: 0 20px;
-  padding-left: 82px;
+  padding-left: 80px;
   box-sizing: border-box;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   z-index: 3;
