--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -11,10 +11,10 @@
 
 .logo {
   z-index: 10;
-  margin-left: 15px;
+  margin-left: 20px;
   position: fixed;
   top: 0;
-  color: var(--text-color-light);
+  color: var(--text-color-dark);
 }
 
 .link {
